--- a/ChairShopping/Views/Shared/_Layout.cshtml
+++ b/ChairShopping/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 				</ul>
 
 				<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-					<li><a class="nav-link" href="#"><img src="~/asset/images/user.svg"></a></li>
+					<li><a class="nav-link" asp-action="login" asp-controller="Account"><img src="~/asset/images/user.svg"></a></li>
 					<li><a class="nav-link" href="cart.html"><img src="~/asset/images/cart.svg"></a></li>
 				</ul>
 			</div>
@@ -58,7 +58,7 @@
 					<div class="intro-excerpt">
 						<h1>Modern Interior <span clsas="d-block">Design Studio</span></h1>
 						<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-						<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
+						<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline text-white">Explore</a></p>
 					</div>
 				</div>
 				<div class="col-lg-7">
