--- a/ChairShopping/Views/Account/Login.cshtml
+++ b/ChairShopping/Views/Account/Login.cshtml
@@ -20,8 +20,22 @@
     <link rel="stylesheet" href="~/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="~/dist/css/adminlte.min.css">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.31/sweetalert2.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.31/sweetalert2.min.js"></script>
 </head>
 <body class="hold-transition login-page">
+    @if (TempData["UserAdded"] != null)
+    {
+
+        <script>
+            Swal.fire(
+                'Congratulations !',
+                '@TempData["UserAdded"]',
+                'success'
+            )
+        </script>
+    }
     <div class="login-box">
         <!-- /.login-logo -->
         <div class="card card-outline card-primary">
@@ -70,7 +84,7 @@
                 <!-- /.social-auth-links -->
 
                 <p class="mb-1">
-                    <a asp-controller="account" asp-action="forgetpassword">I forgot my password</a>
+                    <a asp-controller="Account" asp-action="ForgetPassword">I forgot my password</a>
                 </p>
                 <p class="mb-0">
                     <a asp-controller="account" asp-action="Register" class="text-center">Register a new membership</a>
@@ -87,5 +101,6 @@
     <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
     <script src="~/dist/js/adminlte.min.js"></script>
+
 </body>
 </html>
