UserRoles and Roles dashboard

--- a/ChairShopping/Views/Dashboard/Index.cshtml
+++ b/ChairShopping/Views/Dashboard/Index.cshtml
@@ -218,13 +218,13 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="./index2.html" class="nav-link">
+                                    <a asp-action="GetAllRoles" asp-controller="Dashboard" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Roles</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="./index3.html" class="nav-link">
+                                    <a asp-action="UserRoles" asp-controller="Dashboard" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>User Roles</p>
                                     </a>
