--- a/ChairShopping/Views/Dashboard/EditRole.cshtml
+++ b/ChairShopping/Views/Dashboard/EditRole.cshtml
@@ -1,4 +1,4 @@
-﻿@model RegisterVM
+﻿@model ApplicationRole
 @{
     Layout = null;
 }
@@ -24,30 +24,13 @@
     <link href="~/css/responsive.css" rel="stylesheet" />
 </head>
 <div asp-validation-summary="All" class="text-danger"></div>
-<form class="m-3" asp-action="AddUser" asp-controller="dashboard" method="post">
+<form class="m-3" asp-action="EditRole" asp-controller="dashboard" method="post">
     <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" asp-for="Email" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-        <label for="exampleInputEmail1">User Name</label>
-        <input type="text" class="form-control" asp-for="UserName" placeholder="Enter UserName">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" asp-for="Password" class="form-control" placeholder="Password">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Confirm Password</label>
-        <input type="password" asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password">
-    </div>
-    <div class="form-group form-check">
-        <input type="checkbox" asp-for="IsAgree" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" asp-for="IsAgree" for="exampleCheck1">Is Agree</label>
+        <label for="exampleInputEmail1">Role Name</label>
+        <input type="text" class="form-control" asp-for="Name" value="@ViewBag.Updaterole.Name" placeholder="Enter RoleName">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
-    <a class="btn btn-success" asp-controller="dashboard" asp-action="GetAllUsers">Back</a>
+    <a class="btn btn-success" asp-controller="dashboard" asp-action="GetAllRoles">Back</a>
     <script src="~/js/jquery-3.3.1.min.js"></script>
     <!-- popper js -->
     <script src="~/js/popper.min.js"></script>
@@ -56,3 +39,5 @@
     <!-- custom js -->
     <script src="~/js/custom.js"></script>
 </form>
+
+
