--- a/ChairShopping/Views/Dashboard/GetUserDetails.cshtml
+++ b/ChairShopping/Views/Dashboard/GetUserDetails.cshtml
@@ -24,29 +24,17 @@
     <link href="~/css/responsive.css" rel="stylesheet" />
 </head>
 <div asp-validation-summary="All" class="text-danger"></div>
-<form class="m-3" asp-action="AddUser" asp-controller="dashboard" method="post">
+<form class="m-3" asp-action="GetUserDetails" asp-controller="dashboard" method="get">
     <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" asp-for="Email" placeholder="Enter email">
+        <input type="email" class="form-control" asp-for="Email" value="@ViewBag.UpdateUser.Email" placeholder="Enter email" disabled>
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
         <label for="exampleInputEmail1">User Name</label>
-        <input type="text" class="form-control" asp-for="UserName" placeholder="Enter UserName">
+        <input type="text" class="form-control" asp-for="UserName" value="@ViewBag.UpdateUser.UserName" placeholder="Enter UserName" disabled>
     </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" asp-for="Password" class="form-control" placeholder="Password">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">Confirm Password</label>
-        <input type="password" asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password">
-    </div>
-    <div class="form-group form-check">
-        <input type="checkbox" asp-for="IsAgree" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" asp-for="IsAgree" for="exampleCheck1">Is Agree</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <a class="btn btn-primary" asp-controller="dashboard" asp-action="EditUser" asp-route-id="@ViewBag.UpdateUser.Id">Edit User</a>
     <a class="btn btn-success" asp-controller="dashboard" asp-action="GetAllUsers">Back</a>
     <script src="~/js/jquery-3.3.1.min.js"></script>
     <!-- popper js -->
@@ -56,3 +44,4 @@
     <!-- custom js -->
     <script src="~/js/custom.js"></script>
 </form>
+
