--- a/ChairShopping/Views/Dashboard/Index.cshtml
+++ b/ChairShopping/Views/Dashboard/Index.cshtml
@@ -232,10 +232,10 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/widgets.html" class="nav-link">
+                            <a asp-action="GetAllCategories" asp-controller="Dashboard" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
-                                    Categiries
+                                    Categories
                                     <span class="right badge badge-danger">New</span>
                                 </p>
                             </a>
