--- a/ChairShopping/Views/Dashboard/Index.cshtml
+++ b/ChairShopping/Views/Dashboard/Index.cshtml
@@ -241,7 +241,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/widgets.html" class="nav-link">
+                            <a asp-action="GetAllProducts" asp-controller="Dashboard" class="nav-link">
                                 <i class="fa-brands fa-product-hunt"></i>
                                 <p>
                                     Products
