--- a/ChairShopping/Views/Dashboard/Index.cshtml
+++ b/ChairShopping/Views/Dashboard/Index.cshtml
@@ -249,7 +249,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/widgets.html" class="nav-link">
+                            <a asp-action="GetAllOrders" asp-controller="Dashboard" class="nav-link">
                                 <i class="fa-brands fa-first-order-alt"></i>
                                 <p>
                                    Orders
