--- a/ChairShopping/Views/Dashboard/Index.cshtml
+++ b/ChairShopping/Views/Dashboard/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model DashboardViewModel
+@{
     Layout = null;
 }
 
@@ -7,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdminLTE 3 | Dashboard</title>
+    <title>Admin Dashboard</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
 
@@ -43,7 +44,7 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="index3.html" class="nav-link">Home</a>
+                    <a asp-action="Index" asp-controller="Home" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
                     <a href="#" class="nav-link">Contact</a>
@@ -173,7 +174,7 @@
 
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
 
-            <a href="index3.html" class="brand-link">
+            <a asp-action="Index" asp-controller="Dashboard" class="brand-link">
                 <img src="~/favicon.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">Chairs Dashboard</span>
             </a>
@@ -205,14 +206,14 @@
 
                         <li class="nav-item menu-close">
                             <a href="#" class="nav-link">
-                                <i class="fa-regular fa-users"></i>
+                                <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     User
                                 </p>
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a asp-action="GetAllUsers" asp-controller="Dashboard" class="nav-link active">
+                                    <a asp-action="GetAllUsers" asp-controller="Dashboard" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>All Users</p>
                                     </a>
@@ -242,7 +243,7 @@
                         </li>
                         <li class="nav-item">
                             <a asp-action="GetAllProducts" asp-controller="Dashboard" class="nav-link">
-                                <i class="fa-brands fa-product-hunt"></i>
+                                <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Products
                                 </p>
@@ -250,7 +251,7 @@
                         </li>
                         <li class="nav-item">
                             <a asp-action="GetAllOrders" asp-controller="Dashboard" class="nav-link">
-                                <i class="fa-brands fa-first-order-alt"></i>
+                                <i class="nav-icon fas fa-th"></i>
                                 <p>
                                    Orders
                                 </p>
@@ -273,7 +274,7 @@
                         </div>
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
-                                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                <li class="breadcrumb-item"><a asp-action="Index" asp-controller="Dashboard">Home</a></li>
                                 <li class="breadcrumb-item active">Dashboard</li>
                             </ol>
                         </div>
@@ -290,13 +291,13 @@
 
                             <div class="small-box bg-info">
                                 <div class="inner">
-                                    <h3>150</h3>
-                                    <p>New Orders</p>
+                                    <h3>@Model.Order.Count()</h3>
+                                    <p>Orders</p>
                                 </div>
                                 <div class="icon">
                                     <i class="ion ion-bag"></i>
                                 </div>
-                                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                                <a asp-action="GetAllOrders" asp-controller="dashboard" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                             </div>
                         </div>
 
@@ -304,13 +305,13 @@
 
                             <div class="small-box bg-success">
                                 <div class="inner">
-                                    <h3>53<sup style="font-size: 20px">%</sup></h3>
-                                    <p>Bounce Rate</p>
+                                    <h3>@Model.Category.Count()</h3>
+                                    <p>Categories</p>
                                 </div>
                                 <div class="icon">
                                     <i class="ion ion-stats-bars"></i>
                                 </div>
-                                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                                <a asp-action="GetAllCategories" asp-controller="dashboard" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                             </div>
                         </div>
 
@@ -318,13 +319,13 @@
 
                             <div class="small-box bg-warning">
                                 <div class="inner">
-                                    <h3>44</h3>
-                                    <p>User Registrations</p>
+                                    <h3>@Model.Users.Count()</h3>
+                                    <p>Users</p>
                                 </div>
                                 <div class="icon">
                                     <i class="ion ion-person-add"></i>
                                 </div>
-                                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                                <a asp-action="GetAllUsers" asp-controller="dashboard" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                             </div>
                         </div>
 
@@ -332,13 +333,13 @@
 
                             <div class="small-box bg-danger">
                                 <div class="inner">
-                                    <h3>65</h3>
-                                    <p>Unique Visitors</p>
+                                    <h3>@Model.Product.Count()</h3>
+                                    <p>Products</p>
                                 </div>
                                 <div class="icon">
                                     <i class="ion ion-pie-graph"></i>
                                 </div>
-                                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                                <a asp-action="GetAllProducts" asp-controller="dashboard" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                             </div>
                         </div>
 
@@ -836,7 +837,7 @@
         </div>
 
         <footer class="main-footer">
-            <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
+            <strong>Copyright &copy; 2014-2023 <a href="https://adminlte.io">Admin.io</a>.</strong>
             All rights reserved.
             <div class="float-right d-none d-sm-inline-block">
                 <b>Version</b> 3.2.0
@@ -880,7 +881,7 @@
 
     <script src="~/dist/js/adminlte.js?v=3.2.0"></script>
 
-    <script src="~/dist/js/demo.js"></script>
+   @*  <script src="~/dist/js/demo.js"></script> *@
 
     <script src="~/dist/js/pages/dashboard.js"></script>
 </body>
