--- a/ChairShopping/Views/Account/Register.cshtml
+++ b/ChairShopping/Views/Account/Register.cshtml
@@ -33,7 +33,7 @@
                 <div asp-validation-summary="All" class="text-danger"></div>
 
 
-                <form asp-controller="account" asp-action="Register" method="post">
+                <form asp-controller="account" asp-action="Register" method="post" enctype="multipart/form-data">
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" asp-for="UserName" placeholder="Full name">
                         <div class="input-group-append">
@@ -65,6 +65,10 @@
                                 <span class="fas fa-lock"></span>
                             </div>
                         </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Upload Your Image</label>
+                        <input type="file" class="form-control" asp-for="UserImage">
                     </div>
                     <div class="row">
                         <div class="col-8">
