--- a/ChairShopping/Views/Shared/_Layout.cshtml
+++ b/ChairShopping/Views/Shared/_Layout.cshtml
@@ -52,12 +52,13 @@
 					}
 
 				</ul>
-
-				<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-					<li><a class="nav-link" href="cart.html"><img src="~/asset/images/cart.svg"></a></li>
-					<partial name="_LoginPartial" />
-				</ul>
-			
+					@if(SignInManager.IsSignedIn(User))  // check if user type is an admin
+					{
+						<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
+						<li><a class="nav-link" asp-action="GetCartById" asp-controller="Cart" asp-route-Id="@UserManager.GetUserId(User)"><img src="~/asset/images/cart.svg"></a></li>
+							<partial name="_LoginPartial" />
+						</ul>
+					}
 			</div>
 
 		</div>
