--- a/ChairShopping/Views/Home/Index.cshtml
+++ b/ChairShopping/Views/Home/Index.cshtml
@@ -1,4 +1,3 @@
-
 @using ChairShopping.Interfaces;
 @inject IAdmin _data;
 
@@ -10,23 +9,40 @@
 <html>
 <head>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
+    <link rel="stylesheet" href="~/css/style.css" />
 </head>
 <body>
+
     <!-- Start Product Section -->
     <section id="selling-products" class="product-store bg-light-grey padding-large">
         <div class="container">
+
             <div class="section-header">
                 <h2 class="section-title">Best selling products</h2>
             </div>
+
             <ul id="categoy-tabs" class="tabs list-unstyled">
-                <li class="tab"><a id="all" onclick="GetProduct(0)">All</a></li>
+                <li class="tab"><a id="all" onclick="GetProductsAsync(0)">All</a></li>
                 @foreach (var items in allCteg)
                 {
-
-                    <li class="tab"><a id="@items.Id" onclick="GetProduct(@items.Id)">@items.CategoryName</a></li>
+                    <li class="tab"><a id="@items.Id" onclick="GetProductsAsync(@items.Id)">@items.CategoryName</a></li>
                 }
             </ul>
+
+            <!-- start div for loader-->
+            <div id="mainLoader" class="loading-area">
+                <div class="loader">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <!--end div for loader-->
+
             <div class="tab-content">
 
                 <div id="all" data-tab-content class="active">
@@ -112,6 +128,7 @@
             </div>
         </div>
     </div>
+
     <!-- End Popular Product -->
     <!-- Start Testimonial Slider -->
     <div class="testimonial-section">
@@ -434,28 +451,7 @@
 
 
 
-    <script>
-
-        function GetProduct(val) {
-
-            $.ajax({
-                url: '@Url.Action("ProductClasses","Home")',
-                method: "post",
-                datatype: "json",
-                headers: {
-                    "RequestVerificationToken": $('input[name = __RequestVerificationToken]').val()
-                },
-                data: { categ_id: '' + val + '' },
-                success: function (response) {
-                    console.log(val);
-                    $("#prod-card").html(response);
-                },
-                error: function (error) {
-                    console.log("operation failed...", error);
-                }
-            });
-        }
-    </script>
+    <script src="~/js/ProductAjax.js"></script>
 
 </body>
 </html>
