--- a/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
+++ b/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@using ChairShopping.Interfaces;
 @model List<ChairShopping.Models.Product>
 
+@if(Model.Count() == 0)
+{
+    <h4 style="color:red;">No Products for this Category</h4>
+}
 @foreach (var items in Model)
 {
    <div class="product-item col-lg-3 col-md-6 col-sm-6">
@@ -30,5 +34,8 @@
         </div>
     </div>
 }
+
+
+
 
 
