--- a/ChairShopping/Views/Dashboard/Index.cshtml
+++ b/ChairShopping/Views/Dashboard/Index.cshtml
@@ -257,6 +257,14 @@
                                 </p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a asp-action="GetAllCoupons" asp-controller="Dashboard" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                    Coupons
+                                </p>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
 
@@ -340,6 +348,19 @@
                                     <i class="ion ion-pie-graph"></i>
                                 </div>
                                 <a asp-action="GetAllProducts" asp-controller="dashboard" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-6">
+
+                            <div class="small-box bg-primary">
+                                <div class="inner">
+                                    <h3>@Model.Coupons.Count()</h3>
+                                    <p>Coupons</p>
+                                </div>
+                                <div class="icon">
+                                    <i class="ion ion-pie-graph"></i>
+                                </div>
+                                <a asp-action="GetAllCoupons" asp-controller="dashboard" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                             </div>
                         </div>
 
