--- a/ChairShopping/Views/Cart/GetCartById.cshtml
+++ b/ChairShopping/Views/Cart/GetCartById.cshtml
@@ -108,7 +108,7 @@
 
                         <div class="row">
                             <div class="col-md-12">
-                                <button class="btn btn-success btn-lg py-3 btn-success" onclick="window.location='checkout.html'">Proceed To Checkout</button>
+                                <a asp-action="Index" asp-controller="PlaceOrder" class="btn btn-success btn-lg py-3 btn-success">Proceed To Checkout</a>
                             </div>
                         </div>
                     </div>
