--- a/ChairShopping/Views/PlaceOrder/PlaceOrder.cshtml
+++ b/ChairShopping/Views/PlaceOrder/PlaceOrder.cshtml
@@ -8,8 +8,8 @@
 }
 	<div class="untree_co-section">
 		<div class="container">
-			<div asp-validation-summary="All" class="text-danger"></div>
-		<form asp-action="PlaceOrder" asp-controller="PlaceOrder" method="post">
+@* 			<div asp-validation-summary="All" class="text-danger"></div>
+ *@		<form asp-action="PlaceOrder" asp-controller="PlaceOrder" method="post">
 			@if (_SignInManager.IsSignedIn(User))
 			{
 				<div class="row">
@@ -20,6 +20,7 @@
 								<div class="col-md-6">
 									<label for="c_fname" class="text-black">First Name <span class="text-danger">*</span></label>
 									<input asp-for="FirstName" type="text" class="form-control" placeholder="First Name" value="@User.Identity.Name">
+									<span asp-validation-for="FirstName" class="text-danger"></span>
 								</div>
 								<div class="col-md-6">
 									<label for="c_lname" class="text-black">Last Name <span class="text-danger">*</span></label>
@@ -37,7 +38,8 @@
 							<div class="form-group row mb-5">
 								<div class="col-md-6">
 									<label for="c_email_address" class="text-black">Email Address <span class="text-danger">*</span></label>
-									<input asp-for="Email" type="text" class="form-control" placeholder="Email Address" value="@ViewBag.user.Email">
+									<input asp-for="Email" type="text" class="form-control" placeholder="Email Address">
+									@*  value="@ViewBag.user.Email" *@
 								</div>
 								<div class="col-md-6">
 									<label for="c_phone" class="text-black">Phone <span class="text-danger">*</span></label>
@@ -62,6 +64,7 @@
 									<label for="c_code" class="text-black mb-3">Enter your coupon code if you have one</label>
 									<div class="input-group w-75 couponcode-wrap">
 										<input asp-for="Coupon.CouponCode" type="text" class="form-control me-2" placeholder="Coupon Code">
+										<span asp-validation-for="Coupon.CouponCode" class="text-danger"></span>
 										@* 									<div class="input-group-append">
 									<button class="btn btn-black btn-sm" type="button" id="button-addon2">Apply</button>
 									</div> *@
@@ -81,12 +84,15 @@
 										<th>Total</th>
 										</thead>
 										<tbody>
-											@foreach (var item in ViewBag.order)
+											@if (ViewBag.order !=null)
 											{
-												<tr>
-													<td>@item.Product.ProductName <strong class="mx-2">x</strong>@item.Quantity</td>
-													<td>$@item.TotalPrice</td>
-												</tr>
+												@foreach (var item in ViewBag.order)
+												{
+													<tr>
+														<td>@item.Product.ProductName <strong class="mx-2">x</strong>@item.Quantity</td>
+														<td>$@item.TotalPrice</td>
+													</tr>
+												}
 											}
 											<tr>
 												<td class="text-black font-weight-bold"><strong>Order Total</strong></td>
@@ -111,7 +117,6 @@
 					</div>
 				</div>
 			}
-
 			</form>
 			<!-- </form> -->
 		</div>
