--- a/ChairShopping/Views/PlaceOrder/PlaceOrder.cshtml
+++ b/ChairShopping/Views/PlaceOrder/PlaceOrder.cshtml
@@ -55,25 +55,36 @@
 						</div>
 					</div>
 					<div class="col-md-6">
-
-						<div class="row mb-5">
-							<div class="col-md-12">
-								<h2 class="h3 mb-3 text-black">Coupon Code</h2>
-								<div class="p-3 p-lg-5 border bg-white">
-
-									<label for="c_code" class="text-black mb-3">Enter your coupon code if you have one</label>
-									<div class="input-group w-75 couponcode-wrap">
-										<input asp-for="Coupon.CouponCode" type="text" class="form-control me-2" placeholder="Coupon Code">
-										<span asp-validation-for="Coupon.CouponCode" class="text-danger"></span>
-										@* 									<div class="input-group-append">
-									<button class="btn btn-black btn-sm" type="button" id="button-addon2">Apply</button>
-									</div> *@
+						@if (ViewBag.c == true || ViewBag.c==null)
+						{
+							<div class="row mb-5">
+								<div class="col-md-12">
+									<h2 class="h3 mb-3 text-black">Coupon Code</h2>
+									<div class="p-3 p-lg-5 border bg-white">
+										<label for="c_code" class="text-black mb-3">Enter your coupon code</label>
+										<div class="input-group w-75 couponcode-wrap">
+											<input asp-for="Coupon.CouponCode" type="text" class="form-control me-2" placeholder="Coupon Code">
+											@if (ViewBag.c == true)
+											{
+												<span asp-validation-for="Coupon.CouponCode" class="text-danger"></span>
+											}
+											@if (ViewBag.c == null)
+											{
+												<span class="text-danger">Invalid Coupon</span>
+											}
+										</div>
 									</div>
-
 								</div>
 							</div>
-						</div>
-
+						}
+						@if (ViewBag.c == false)
+						{
+							<div class="row mb-5">
+								<div class="col-md-12">
+									<h2 class="h3 mb-3 text-danger">No Coupon Today</h2>
+								</div>
+							</div>
+						}
 						<div class="row mb-5">
 							<div class="col-md-12">
 								<h2 class="h3 mb-3 text-black">Your Order</h2>
