--- a/ChairShopping/Views/Cart/GetCartById.cshtml
+++ b/ChairShopping/Views/Cart/GetCartById.cshtml
@@ -14,7 +14,7 @@
 <br />
 <br />
 <!-- Shoping Cart -->
-<form class="bg0 p-t-75 p-b-85" asp-action="GetCartById" asp-controller="Cart" method="get">
+@* <form class="bg0 p-t-75 p-b-85" asp-action="GetCartById" asp-controller="Cart" method="get"> *@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
@@ -65,8 +65,7 @@
 												<button  type="submit" >
 													<img src="~/images/icons/icon-close2.png" >
 												</button>
-											</form>
-										
+											</form>										
 										</td>
 									</tr>
 								}
@@ -98,7 +97,7 @@
 						Cart Totals
 					</h4>
 
-					<div class="flex-w flex-t bor12 p-b-13">
+@* 					<div class="flex-w flex-t bor12 p-b-13">
 						<div class="size-208">
 							<span class="stext-110 cl2">
 								Subtotal:
@@ -110,7 +109,7 @@
 								$@ViewBag.Total
 							</span>
 						</div>
-					</div>
+					</div> *@
 
 			
 
@@ -137,7 +136,7 @@
 			</div>
 		</div>
 	</div>
-</form>
+@* </form> *@
 
 
 <!-- Footer -->
