--- a/ChairShopping/Views/Shared/_Layout.cshtml
+++ b/ChairShopping/Views/Shared/_Layout.cshtml
@@ -203,12 +203,12 @@
                     <img src="~/images/icons/icon-close2.png" alt="CLOSE">
                 </button>
 
-                <form class="wrap-search-header flex-w p-l-15">
+ @*                <form class="wrap-search-header flex-w p-l-15" method="get"> *@
                     <button class="flex-c-m trans-04">
                         <i class="zmdi zmdi-search"></i>
                     </button>
                     <input class="plh3" type="text" name="search" placeholder="Search...">
-                </form>
+@*                 </form> *@
             </div>
         </div>
     </header>
@@ -237,15 +237,14 @@
                             var get_product = _data.GetProductById(items.ProductId).Result;
 
                             <li class="header-cart-item flex-w flex-t m-b-12">
-                                <div class="header-cart-item-img">
-                                    <img src="~/asset/images/@get_product.Image" alt="IMG">
-                                </div>
+                                    <div class="header-cart-item-img">
+                                        <img src="~/asset/images/@get_product.Image" alt="IMG">
+                                    </div>
 
                                 <div class="header-cart-item-txt p-t-8">
-                                    <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-                                        @get_product.ProductName
-                                    </a>
-
+                                        <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
+                                            @get_product.ProductName
+                                        </a>
                                     <span class="header-cart-item-info">
                                         @items.Quantity x @items.Price$
                                     </span>
@@ -262,7 +261,7 @@
 
                 <div class="w-full">
                     <div class="header-cart-total w-full p-tb-40">
-                        Total: @_cart.TotalOrderPrice(UserManager.GetUserId(User)).Result $;
+                        Total: @_cart.TotalOrderPrice(UserManager.GetUserId(User)).Result $
                     </div>
 
                     <div class="header-cart-buttons flex-w w-full">
