--- a/ChairShopping/wwwroot/css/style.css
+++ b/ChairShopping/wwwroot/css/style.css
@@ -694,70 +694,53 @@ main {
 
 /*** end sidebar ***/
 
-
-.loading-area {
-    display: grid;
-    place-items: center;
-    height: 100vh;
-    position: absolute;
-    right: 40%;
+.loader {
+    width: 48px;
+    height: 48px;
+    display: block;
+    margin: 15px auto;
+    position: relative;
+    color: #FFF;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
 }
 
-.loader div {
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    transform: scale(0);
-    animation: animate 1.5s ease-in-out infinite;
-    display: inline-block;
-    margin: .5rem;
+    .loader::after,
+    .loader::before {
+        content: '';
+        box-sizing: border-box;
+        position: absolute;
+        width: 24px;
+        height: 24px;
+        top: 0;
+        background-color: #00B9E4;
+        border-radius: 50%;
+        animation: scale50 1s infinite ease-in-out;
+    }
+
+    .loader::before {
+        top: auto;
+        bottom: 0;
+        background-color: #003C72;
+        animation-delay: 0.5s;
+    }
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
-    .loader div:nth-child(0) {
-        animation-delay: 0s;
-    }
-
-    .loader div:nth-child(1) {
-        animation-delay: 0.2s;
-    }
-
-    .loader div:nth-child(2) {
-        animation-delay: 0.4s;
-    }
-
-    .loader div:nth-child(3) {
-        animation-delay: 0.6s;
-    }
-
-    .loader div:nth-child(4) {
-        animation-delay: 0.8s;
-    }
-
-    .loader div:nth-child(5) {
-        animation-delay: 1s;
-    }
-
-    .loader div:nth-child(6) {
-        animation-delay: 1.2s;
-    }
-
-    .loader div:nth-child(7) {
-        animation-delay: 1.4s;
-    }
-
-@keyframes animate {
+@keyframes scale50 {
     0%, 100% {
-        transform: scale(0.2);
-        background-color: #BD0036;
-    }
-
-    40% {
-        transform: scale(1);
-        background-color: #F25330;
+        transform: scale(0);
     }
 
     50% {
         transform: scale(1);
-        background-color: #F2B900;
     }
-}
+} 
