--- a/ChairShopping/Views/Cart/GetCartById.cshtml
+++ b/ChairShopping/Views/Cart/GetCartById.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity;
 @model OrderViewModel
 @inject UserManager<ApplicationUser> _UserManager;
+@inject SignInManager<ApplicationUser> _SignInManager;
+
 @{
     Layout = ("_Layout");
 
@@ -40,6 +42,7 @@
                             <th class="column-3">Price</th>
                             <th class="column-4">Quantity</th>
                             <th class="column-5">Total</th>
+                            <th></th>
                             <th class="column-6">Remove</th>
                         </tr>
                      
@@ -54,22 +57,15 @@
                                         </div>
                                     </td>
                                     <td class="column-2">@item.Product.ProductName</td>
-                                    <td class="column-3">$ @item.Product.Price</td>
-                                    <td class="column-4">
-                                        <div class="wrap-num-product flex-w m-l-auto m-r-0">
-                                            <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-                                                <i class="fs-16 zmdi zmdi-minus"></i>
-                                            </div>
-
-                                            <input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product1" value="@item.Quantity">
-
-                                            <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-                                                <i class="fs-16 zmdi zmdi-plus"></i>
-                                            </div>
-                                        </div>
+                                    <td class="column-3">$@item.Product.Price</td>
+                                    <td class="column-4" style="text-align: center;">
+                                        @item.Quantity
                                     </td>
-                                    <td class="column-5">$ @item.TotalPrice</td>
-                                    <td class="column-6">
+                                    <td class="column-5">$@item.TotalPrice</td>
+                                    <td style="text-align: center;">
+                                        <a asp-action="UpdateCart" asp-controller="Cart" asp-route-id="@item.Id" class="btn btn-primary">Update</a>
+                                    </td>
+                                    <td class="column-6" style="text-align: center;">
                                         <form asp-action="RemoveOrder" asp-controller="Cart" method="post">
                                             <input type="hidden" name="Id" value="@item.Id" />
                                             <button type="submit">
@@ -80,8 +76,6 @@
                                 </tr>
                             }
                         }
-
-
                     </table>
                 </div>
 
@@ -92,10 +86,6 @@
                         <div class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5">
                             <a asp-action="Index" asp-controller="Home" style="color:black">Back</a>
                         </div>
-                    </div>
-
-                    <div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
-                        Update Cart
                     </div>
                 </div>
             </div>
