--- a/ChairShopping/Views/Dashboard/GetAllProducts.cshtml
+++ b/ChairShopping/Views/Dashboard/GetAllProducts.cshtml
@@ -24,6 +24,7 @@
 </head>
 <!-- Content Header (Page header) -->
 <div class="content-header">
+    <partial name="_Notifications" />
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
