--- a/ChairShopping/Views/Home/Index.cshtml
+++ b/ChairShopping/Views/Home/Index.cshtml
@@ -103,9 +103,9 @@
                             <i class="zmdi zmdi-shopping-cart"></i>
                         </div>
 
-                        <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
+                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-favourite" data-notify="@user_order.Count">
                             <i class="zmdi zmdi-favorite-outline"></i>
-                        </a>
+                        </div>
                     </div>
                 </nav>
             </div>
@@ -276,7 +276,70 @@
         </div>
     </div>
 
+    <!-- Favourite -->
+    <div class="wrap-header-favourite js-panel-favourite">
+        <div class="s-full js-hide-favourite"></div>
 
+        <div class="header-favourite flex-col-l p-l-65 p-r-25">
+            <div class="header-favourite-title flex-w flex-sb-m p-b-8">
+                <span class="mtext-103 cl2">
+                    Your Favourite
+                </span>
+
+                <div class="fs-35 lh-10 cl2 p-lr-5 pointer hov-cl1 trans-04 js-hide-favourite">
+                    <i class="zmdi zmdi-close"></i>
+                </div>
+            </div>
+
+            <div class="header-favourite-content flex-w js-pscroll">
+                <ul class="header-favourite-wrapitem w-full">
+                    @if (user_order != null)
+                    {
+                        foreach (var items in user_order)
+                        {
+                            var get_product = _data.GetProductById(items.ProductId).Result;
+
+                            <li class="header-favourite-item flex-w flex-t m-b-12">
+                                <div class="header-favourite-item-img">
+                                    <img src="~/asset/images/@get_product.Image" alt="IMG">
+                                </div>
+
+                                <div class="header-favourite-item-txt p-t-8">
+                                    <a href="#" class="header-favourite-item-name m-b-18 hov-cl1 trans-04">
+                                        @get_product.ProductName
+                                    </a>
+                                    <span class="header-favourite-item-info">
+                                        @items.Quantity x @items.Price$
+                                    </span>
+                                </div>
+                            </li>
+                        }
+                    }
+                    else
+                    {
+                        <li> Cart is Empty</li>
+                    }
+
+                </ul>
+
+                <div class="w-full">
+                    <div class="header-favourite-total w-full p-tb-40">
+                        Total: @_cart.TotalOrderPrice(UserManager.GetUserId(User)).Result $
+                    </div>
+
+                    <div class="header-favourite-buttons flex-w w-full">
+                        <a asp-action="GetCartById" target="_blank" asp-controller="Cart" asp-route-Id="@UserManager.GetUserId(User)" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
+                            View favourite
+                        </a>
+
+                        <a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
+                            Check Out
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Slider -->
     <section class="section-slide">
