--- a/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
+++ b/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@using ChairShopping.Interfaces;
-@model List<ChairShopping.Models.Product>
+@model PagedList<Product>
 @using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<ApplicationUser> _SignInManager
 @inject UserManager<ApplicationUser> _UserManager
 
-@if (Model.Count() == 0)
+@if (Model.Items.Count == 0)
 {
     <h4 style="color:red;">No Products for this Category</h4>
 }
-@foreach (var items in Model)
+@foreach (var items in Model.Items)
 {
     <!-- Block2 -->
     <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
@@ -17,7 +17,7 @@
             <form asp-action="AddToCart" asp-controller="Cart" method="get">
                 <div class="block2-pic hov-img0">
                     <div class="block2-pic hov-img0">
-                        <img src="~/asset/images/@items.Image" alt="IMG-PRODUCT" width="200" height="300">
+                        <img src="~/asset/images/@items.Image" alt="IMG-PRODUCT" width="200" height="300" style="border-radius:10px">
                         <div class="wrap-num-product flex-w m-r-20 m-tb-10">
                             <input type="hidden" name="Price" value="@items.Price" />
                             <input type="hidden" name="ProductId" value="@items.Id" />
@@ -65,6 +65,30 @@
     </div>
 }
 
+
+<!-- Add pagination links -->
+<nav>
+    <ul lass="pagination justify-content-center">
+        @if (Model.HasPreviousPage)
+        {
+            <li class="page-item">
+                <a class="page-link" href="@Url.Action("Index", new { pageNumber = Model.PageIndex - 1, pageSize = Model.PageSize })">Previous</a>
+            </li>
+        }
+        @for (var i = 1; i <= Model.TotalPages; i++)
+        {
+            <li class="page-item @(i == Model.PageIndex ? "active" : "")">
+                <a class="page-link" href="@Url.Action("Index", new { pageNumber = i, pageSize = Model.PageSize })">@i</a>
+            </li>
+        }
+        @if (Model.HasNextPage)
+        {
+            <li class="page-item">
+                <a class="page-link" href="@Url.Action("Index", new { pageNumber = Model.PageIndex + 1, pageSize = Model.PageSize })">Next</a>
+            </li>
+        }
+    </ul>
+</nav>
 
 
 
