--- a/ChairShopping/Views/Home/Index.cshtml
+++ b/ChairShopping/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
     var allCteg = await _data.GetCategoriesLimitAsync(5);
     var allProd = _data.GetAllProducts().Result.Count();
     var user_order = await _cart.GetCartById(UserManager.GetUserId(User));
-
+    var user_favourite = await _cart.GetFavouriteById(UserManager.GetUserId(User));
 }
 <html>
 <head>
@@ -103,7 +103,7 @@
                             <i class="zmdi zmdi-shopping-cart"></i>
                         </div>
 
-                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-favourite" data-notify="@user_order.Count">
+                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-favourite" data-notify="@user_favourite.Count">
                             <i class="zmdi zmdi-favorite-outline"></i>
                         </div>
                     </div>
@@ -293,9 +293,9 @@
 
             <div class="header-favourite-content flex-w js-pscroll">
                 <ul class="header-favourite-wrapitem w-full">
-                    @if (user_order != null)
+                    @if (user_favourite != null)
                     {
-                        foreach (var items in user_order)
+                        foreach (var items in user_favourite)
                         {
                             var get_product = _data.GetProductById(items.ProductId).Result;
 
@@ -308,35 +308,16 @@
                                     <a href="#" class="header-favourite-item-name m-b-18 hov-cl1 trans-04">
                                         @get_product.ProductName
                                     </a>
-                                    <span class="header-favourite-item-info">
-                                        @items.Quantity x @items.Price$
-                                    </span>
                                 </div>
                             </li>
                         }
                     }
                     else
                     {
-                        <li> Cart is Empty</li>
+                        <li> Favourite is Empty</li>
                     }
 
                 </ul>
-
-                <div class="w-full">
-                    <div class="header-favourite-total w-full p-tb-40">
-                        Total: @_cart.TotalOrderPrice(UserManager.GetUserId(User)).Result $
-                    </div>
-
-                    <div class="header-favourite-buttons flex-w w-full">
-                        <a asp-action="GetCartById" target="_blank" asp-controller="Cart" asp-route-Id="@UserManager.GetUserId(User)" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
-                            View favourite
-                        </a>
-
-                        <a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
-                            Check Out
-                        </a>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -966,78 +947,6 @@
                             </div>
                         </div>
                     </div>
-
-                    @*  <div class="col-md-6 col-lg-5 p-b-30">
-                    <div class="p-r-50 p-t-5 p-lr-0-lg">
-                    <h4 class="mtext-105 cl2 js-name-detail p-b-14">
-                    Lightweight Jacket
-                    </h4>
-
-                    <span class="mtext-106 cl2">
-                    $58.79
-                    </span>
-
-                    <p class="stext-102 cl3 p-t-23">
-                    Nulla eget sem vitae eros pharetra viverra. Nam vitae luctus ligula. Mauris consequat ornare feugiat.
-                    </p>
-
-                    <!--  -->
-                    <div class="p-t-33">
-                    <div class="flex-w flex-r-m p-b-10">
-                    <div class="size-204 flex-w flex-m respon6-next">
-                    <form asp-action="AddToCart" asp-controller="Cart" method="get">
-                    <div class="wrap-num-product flex-w m-r-20 m-tb-10">
-                    <input type="hidden" name="Price" value="@Model.Price" />
-                    <input type="hidden" name="ProductId" value="@Model.Id" />
-                    <input type="hidden" name="Discount" value="0" />
-                    @if (SignInManager.IsSignedIn(User))
-                    {
-                    <input type="hidden" name="UserId" value="@UserManager.GetUserId(User)" />
-                    }
-                    <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-                    <i class="fs-16 zmdi zmdi-minus"></i>
-                    </div>
-
-                    <input class="mtext-104 cl3 txt-center num-product" type="number" name="Quantity" value="1">
-
-                    <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-                    <i class="fs-16 zmdi zmdi-plus"></i>
-                    </div>
-                    </div>
-                    <button type="submit" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail">
-                    Add to cart
-                    </button>
-                    </form>
-                    </div>
-                    </div>
-                    </div>
-
-                    <!--  -->
-                    <div class="flex-w flex-m p-l-100 p-t-40 respon7">
-                    <div class="flex-m bor9 p-r-10 m-r-11">
-                    <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100" data-tooltip="Add to Wishlist">
-                    <i class="zmdi zmdi-favorite"></i>
-                    </a>
-                    </div>
-
-                    <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Facebook">
-                    <i class="fa fa-facebook"></i>
-                    </a>
-
-                    <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Twitter">
-                    <i class="fa fa-twitter"></i>
-                    </a>
-
-                    <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Google Plus">
-                    <i class="fa fa-google-plus"></i>
-                    </a>
-                    </div>
-                    </div>
-                    </div>
-                    *@
-
-
-
                 </div>
             </div>
         </div>
