--- a/ChairShopping/Views/Dashboard/Index.cshtml
+++ b/ChairShopping/Views/Dashboard/Index.cshtml
@@ -379,6 +379,32 @@
                                 <a asp-action="GetAllCoupons" asp-controller="dashboard" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                             </div>
                         </div>
+                        <div class="col-lg-3 col-6">
+
+                            <div class="small-box bg-secondary">
+                                <div class="inner">
+                                    <h3>@Model.PlaceOrders.Count()</h3>
+                                    <p>PlaceOrders</p>
+                                </div>
+                                <div class="icon">
+                                    <i class="ion ion-pie-graph"></i>
+                                </div>
+                                <a asp-action="GetAllPlaceOrders" asp-controller="dashboard" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-6">
+
+                            <div class="small-box bg-info">
+                                <div class="inner">
+                                    <h3>@Model.Favourites.Count()</h3>
+                                    <p>Favourites</p>
+                                </div>
+                                <div class="icon">
+                                    <i class="ion ion-pie-graph"></i>
+                                </div>
+                                <a asp-action="GetAllFavourits" asp-controller="dashboard" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                            </div>
+                        </div>
 
                     </div>
 
