--- a/ChairShopping/Views/Shared/_Layout.cshtml
+++ b/ChairShopping/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     var allCteg = await _data.GetCategoriesLimitAsync(5);
     var allProd = _data.GetAllProducts().Result.Count();
     var user_order = await _cart.GetCartById(UserManager.GetUserId(User));
-
+    var user_favourite = await _cart.GetFavouriteById(UserManager.GetUserId(User));
 }
 
 <!DOCTYPE html>
@@ -102,7 +102,7 @@
                             <i class="zmdi zmdi-shopping-cart"></i>
                         </div>
 
-                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-favourite" data-notify="@user_order.Count">
+                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-favourite" data-notify="@user_favourite.Count">
                             <i class="zmdi zmdi-favorite-outline"></i>
                         </div>
                     </div>
@@ -265,12 +265,53 @@
                         <a asp-action="GetCartById" target="_blank" asp-controller="Cart" asp-route-Id="@UserManager.GetUserId(User)" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
                             View Cart
                         </a>
-
-                        <a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
-                            Check Out
-                        </a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <!-- Favourite -->
+    <div class="wrap-header-favourite js-panel-favourite">
+        <div class="s-full js-hide-favourite"></div>
+
+        <div class="header-favourite flex-col-l p-l-65 p-r-25">
+            <div class="header-favourite-title flex-w flex-sb-m p-b-8">
+                <span class="mtext-103 cl2">
+                    Your Favourite
+                </span>
+
+                <div class="fs-35 lh-10 cl2 p-lr-5 pointer hov-cl1 trans-04 js-hide-favourite">
+                    <i class="zmdi zmdi-close"></i>
+                </div>
+            </div>
+
+            <div class="header-favourite-content flex-w js-pscroll">
+                <ul class="header-favourite-wrapitem w-full">
+                    @if (user_favourite != null)
+                    {
+                        foreach (var items in user_favourite)
+                        {
+                            var get_product = _data.GetProductById(items.ProductId).Result;
+
+                            <li class="header-favourite-item flex-w flex-t m-b-12">
+                                <div class="header-favourite-item-img">
+                                    <img src="~/asset/images/@get_product.Image" alt="IMG">
+                                </div>
+
+                                <div class="header-favourite-item-txt p-t-8">
+                                    <a href="#" class="header-favourite-item-name m-b-18 hov-cl1 trans-04">
+                                        @get_product.ProductName
+                                    </a>
+                                </div>
+                            </li>
+                        }
+                    }
+                    else
+                    {
+                        <li> Favourite is Empty</li>
+                    }
+
+                </ul>
             </div>
         </div>
     </div>
