--- a/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
+++ b/ChairShopping/Views/Shared/Components/ProductClasses/Index.cshtml
@@ -25,7 +25,7 @@
                 <div class="block2-txt flex-w flex-t p-t-14">
                     <div class="block2-txt-child1 flex-col-l ">
                         <a asp-action="Index" asp-controller="ProductDetails" asp-route-id="@items.Id" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
-                            Esprit Ruffle Shirt
+                            @items.ProductName
                         </a>
 
                         <span class="stext-105 cl3">
