--- a/ChairShopping/Views/Shared/CssScripts.cshtml
+++ b/ChairShopping/Views/Shared/CssScripts.cshtml
@@ -16,6 +16,13 @@
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="~/fonts/linearicons-v1.0.0/icon-font.min.css">
 	<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	@RenderSection("DataTableStyle", required: false)
+	<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<!--===============================================================================================-->
+
 	<link rel="stylesheet" type="text/css" href="~/vendor/animate/animate.css">
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="~/vendor/css-hamburgers/hamburgers.min.css">
@@ -56,6 +63,14 @@
 	<!--===============================================================================================-->
 	<script src="~/vendor/bootstrap/js/popper.js"></script>
 	<script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
+	<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	@RenderSection("DataTableScripts", required: false)
+
+	<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<!--===============================================================================================-->
 	<script src="~/vendor/select2/select2.min.js"></script>
 	<script>
